# avmgl

./: CMakeLists.txt  Cargo.toml  README.md
docs/: testing.md
src/: common.rs  driver.rs  lib.rs  traits.rs
src/otm8009a/: defs.rs  driver.rs  mod.rs  nifs.rs
src/testing/: footprint.rs  mocks.rs  mod.rs  nifs.rs  traits.rs
